--- a/stickies/window/untitled.ui
+++ b/stickies/window/untitled.ui
@@ -357,6 +357,19 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="total_stickies_lbl">
+    <property name="geometry">
+     <rect>
+      <x>770</x>
+      <y>-1</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
